# MakeShiftSSD

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/app/api/session/login/: route.ts
apps/web/app/api/storage/archive/: route.ts
apps/web/app/api/storage/copy/: route.ts
apps/web/app/api/storage/delete/: route.ts
apps/web/app/api/storage/download/: route.ts
apps/web/app/api/storage/folders/: route.ts
apps/web/app/api/storage/list/: route.ts
apps/web/app/api/storage/move/: route.ts
apps/web/app/api/storage/preview/: route.ts
apps/web/app/api/storage/preview-info/: route.ts
apps/web/app/api/storage/rename/: route.ts
apps/web/app/api/storage/search/: route.ts
apps/web/app/api/storage/upload/: route.ts
apps/web/app/files/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: file-manager.tsx  login-form.tsx
apps/web/lib/: session.ts  storage-api.ts  types.ts
services/storage/: .env.example  pyproject.toml
services/storage/app/: __init__.py  auth.py  config.py  main.py  schemas.py  storage.py
services/storage/tests/: conftest.py  test_api.py  test_storage_paths.py
