[project]
name = "personalcloud-storage"
version = "0.1.0"
description = "FastAPI storage service for PersonalCloud"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
